--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,11 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     dataBinding {
         enabled = true
     }
@@ -30,7 +35,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.5.0-alpha02'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     testImplementation 'junit:junit:4.13'
@@ -38,6 +43,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.material:material:1.3.0-alpha02'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "org.koin:koin-core:2.1.6"
     implementation "org.koin:koin-androidx-viewmodel:2.1.6"
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -46,13 +52,18 @@ dependencies {
     androidTestImplementation "androidx.test:rules:1.3.0"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "io.mockk:mockk:1.10.0"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.8.0"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     kapt 'androidx.lifecycle:lifecycle-compiler:2.2.0'
-    implementation 'androidx.room:room-runtime:2.2.5'
-    implementation 'androidx.room:room-rxjava2:2.2.5'
-    kapt 'androidx.room:room-compiler:2.2.5'
+    implementation 'androidx.room:room-runtime:2.3.0-alpha02'
+    implementation 'androidx.room:room-ktx:2.3.0-alpha02'
+    implementation 'androidx.room:room-rxjava2:2.3.0-alpha02'
+    kapt 'androidx.room:room-compiler:2.3.0-alpha02'
     androidTestImplementation 'androidx.room:room-testing:2.2.5'
-    implementation "androidx.paging:paging-runtime:3.0.0-alpha06"
-    implementation "androidx.paging:paging-rxjava2:3.0.0-alpha06"
+    implementation "androidx.paging:paging-runtime:3.0.0-alpha03"
+    implementation "androidx.paging:paging-rxjava2:3.0.0-alpha03"
     implementation 'com.android.support:multidex:1.0.3'
 }
