--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
     dataBinding {
         enabled = true
     }
@@ -63,7 +67,7 @@ dependencies {
     implementation 'androidx.room:room-rxjava2:2.3.0-alpha02'
     kapt 'androidx.room:room-compiler:2.3.0-alpha02'
     androidTestImplementation 'androidx.room:room-testing:2.2.5'
-    implementation "androidx.paging:paging-runtime:3.0.0-alpha03"
-    implementation "androidx.paging:paging-rxjava2:3.0.0-alpha03"
+    implementation "androidx.paging:paging-runtime:3.0.0-alpha06"
+    implementation "androidx.paging:paging-rxjava2:3.0.0-alpha06"
     implementation 'com.android.support:multidex:1.0.3'
 }
