--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.detail.DetailMovieTvActivity"/>
+        <activity android:name=".ui.detail.MovieDetailActivity"/>
+        <activity android:name=".ui.detail.TvShowDetailActivity"/>
         <activity android:name=".ui.favorite.FavoriteActivity"/>
     </application>
 
